igt@kms_vrr@flip* - abort - 1 mismatch in has_psr2 (expected yes, found no)
<4> [87.109411] RBP: 00000000c03864bc R08: 0000000000000000 R09: 0000000000000000
<4> [87.109412] R10: 0000000000000007 R11: 0000000000000246 R12: 00005652d2954a70
<4> [87.109413] R13: 0000000000000005 R14: 00005652d2947320 R15: 00005652d291c610
<4> [87.109418] </TASK>
<4> [87.109419] irq event stamp: 204176
<4> [87.109420] hardirqs last enabled at (204175): [<ffffffff81cd01d8>] _raw_spin_unlock_irqrestore+0x58/0x70
<4> [87.109424] hardirqs last disabled at (204176): [<ffffffffa067be4a>] intel_pipe_update_start+0x4fa/0x520 [i915]
<4> [87.109531] softirqs last enabled at (203904): [<ffffffff81cd130d>] __do_softirq+0x2bd/0x3a9
<4> [87.109532] softirqs last disabled at (203899): [<ffffffff810d9c2e>] irq_exit_rcu+0x8e/0xd0
<4> [87.109535] ---[ end trace 0000000000000000 ]---
<7> [87.109638] i915 0000:00:02.0: [drm:intel_pipe_update_end [i915]] Atomic update on pipe (A) took 1581 us, max time under evasion is 250 us
<7> [87.121316] i915 0000:00:02.0: [drm:verify_connector_state [i915]] [CONNECTOR:236:eDP-1]
<7> [87.121715] i915 0000:00:02.0: [drm:intel_modeset_verify_crtc [i915]] [CRTC:80:pipe A]
<7> [87.123076] i915 0000:00:02.0: [drm:intel_read_dp_sdp [i915]] Failed to unpack DP VSC SDP
<3> [87.123291] i915 0000:00:02.0: [drm] *ERROR* [CRTC:80:pipe A] mismatch in has_psr2 (expected yes, found no)
<3> [87.123450] i915 0000:00:02.0: [drm] *ERROR* [CRTC:80:pipe A] mismatch in enable_psr2_sel_fetch (expected yes, found no)
<4> [87.123459] ------------[ cut here ]------------
<4> [87.123461] i915 0000:00:02.0: pipe state doesn't match!
<4> [87.123494] WARNING: CPU: 3 PID: 1241 at drivers/gpu/drm/i915/display/intel_modeset_verify.c:223 intel_modeset_verify_crtc+0x435/0x530 [i915]
<4> [87.123735] Modules linked in: fuse snd_hda_codec_hdmi r8153_ecm cdc_ether i915 x86_pkg_temp_thermal coretemp kvm_intel kvm r8152 snd_hda_intel snd_intel_dspcfg mei_gsc_proxy smsc75xx snd_hda_codec irqbypass usbnet prime_numbers i2c_algo_bit crct10dif_pclmul snd_hwdep mii wmi_bmof crc32_pclmul ghash_clmulni_intel snd_hda_core ttm e1000e i2c_i801 mei_me video snd_pcm ptp drm_display_helper i2c_smbus pps_core mei intel_lpss_pci drm_buddy wmi
<4> [87.123807] CPU: 3 PID: 1241 Comm: kms_vrr Tainted: G W 6.6.0-CI_DRM_13867-g9f915320c417+ #1
<4> [87.123812] Hardware name: Intel Corporation Meteor Lake Client Platform/MTL-P DDR5 SODIMM SBS RVP, BIOS MTLPFWI1.R00.3323.D89.2309110529 09/11/2023
<4> [87.123815] RIP: 0010:intel_modeset_verify_crtc+0x435/0x530 [i915]
<4> [87.124006] Code: 0f 0b e9 ae fd ff ff 4c 8b 7f 50 4d 85 ff 75 03 4c 8b 3f e8 3d d3 1b e1 4c 89 fa 48 c7 c7 c0 e7 94 a0 48 89 c6 e8 bb 27 a0 e0 <0f> 0b e9 5e fe ff ff 4c 8b 57 50 4d 85 d2 75 03 4c 8b 17 44 88 5c
<4> [87.124010] RSP: 0018:ffffc90001fe7ad8 EFLAGS: 00010282
<4> [87.124014] RAX: 0000000000000000 RBX: ffff888119c80000 RCX: 0000000000000000
<4> [87.124018] RDX: 0000000000000002 RSI: ffffffff823ec12a RDI: 00000000ffffffff
<4> [87.124020] RBP: ffff888126824000 R08: 0000000000000000 R09: ffffc90001fe7970
<4> [87.124022] R10: 0000000000000001 R11: 0000000000000001 R12: ffff888113f3b800
<4> [87.124024] R13: ffff8881168a2000 R14: ffff888124242000 R15: ffff8881026fe410
<4> [87.124027] FS: 00007fd34dfb8c40(0000) GS:ffff88846eb80000(0000) knlGS:0000000000000000
<4> [87.124030] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [87.124032] CR2: 00007fd350a4d000 CR3: 0000000126842002 CR4: 0000000000f70ee0